Refactor: Update Rename IDs topbar and move editing tools
- Refactor src/gui/tabs/rename_ids.py to use SegmentedWidget
- Implement Ridge, Ordering, Numbering tabs with reactive params
- Move point editing tools to Rename IDs Numbering tab
- Remove Points tab from seedling_detect.py
- Add Save SHP to Slice Inference tab
- Update localization files

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -103,20 +103,41 @@
     "page.seedling.msg.preview_stopping": "Trying to stop inference",
     "page.seedling.msg.preview_finished": "Preview inference finished",
     "page.seedling.msg.preview_cancelled": "Preview inference cancelled",
+    "page.seedling.btn.save_shp": "Save SHP",
 
+    "page.rename.group.file": "File",
+    "page.rename.btn.load_dom": "Load DOM",
+    "page.rename.btn.load_boundary": "Load Boundary",
     "page.rename.group.ridge": "Ridge Detect",
+    "page.rename.tab.file": "File",
+    "page.rename.tab.ridge": "Ridge",
+    "page.rename.tab.ordering": "Ordering",
+    "page.rename.tab.numbering": "Numbering",
     "page.rename.label.direction": "Direction:",
     "page.rename.combo.auto": "Auto",
     "page.rename.combo.x": "X-Axis",
     "page.rename.combo.y": "Y-Axis",
     "page.rename.label.strength": "Strength Ratio:",
+    "page.rename.label.distance": "Distance:",
+    "page.rename.label.height": "Height:",
     "page.rename.btn.detect": "Detect Ridge",
+    "page.rename.group.order": "Ordering Rules",
+    "page.rename.label.buffer": "Buffer:",
+    "page.rename.check.ransac": "RANSAC",
+    "page.rename.label.residual": "Residual:",
+    "page.rename.label.max_trials": "Max Trials:",
     "page.rename.group.num": "Numbering Rules",
     "page.rename.label.format": "Format:",
     "page.rename.combo.rc_plant": "Ridge-Plant",
     "page.rename.combo.numeric": "Numeric",
     "page.rename.combo.custom": "Custom",
     "page.rename.btn.apply": "Apply",
+    "page.rename.group.tools": "Edit Tools",
+    "page.rename.btn.view": "View",
+    "page.rename.btn.add": "Add",
+    "page.rename.btn.move": "Move",
+    "page.rename.btn.delete": "Delete",
+    "page.rename.btn.undo": "Undo",
 
     "page.ts.btn.load_points": "Load Plant Pts",
     "page.ts.btn.add_date": "Add Date",
