--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -103,20 +103,41 @@
     "page.seedling.msg.preview_stopping": "推論を停止しています",
     "page.seedling.msg.preview_finished": "前覧推論が完了しました",
     "page.seedling.msg.preview_cancelled": "プレビュー推論をキャンセルしました",
+    "page.seedling.btn.save_shp": "SHP保存",
 
+    "page.rename.group.file": "ファイル",
+    "page.rename.btn.load_dom": "画像読込",
+    "page.rename.btn.load_boundary": "境界読込",
     "page.rename.group.ridge": "畝検出",
+    "page.rename.tab.file": "ファイル",
+    "page.rename.tab.ridge": "畝検出",
+    "page.rename.tab.ordering": "順序付け",
+    "page.rename.tab.numbering": "番号",
     "page.rename.label.direction": "方向:",
     "page.rename.combo.auto": "自動",
     "page.rename.combo.x": "X方向",
     "page.rename.combo.y": "Y方向",
     "page.rename.label.strength": "強度比:",
+    "page.rename.label.distance": "距離:",
+    "page.rename.label.height": "高さ:",
     "page.rename.btn.detect": "畝検出",
+    "page.rename.group.order": "順序ルール",
+    "page.rename.label.buffer": "バッファ:",
+    "page.rename.check.ransac": "RANSAC",
+    "page.rename.label.residual": "残差:",
+    "page.rename.label.max_trials": "試行回数:",
     "page.rename.group.num": "番号規則",
     "page.rename.label.format": "形式:",
     "page.rename.combo.rc_plant": "畝-苗",
     "page.rename.combo.numeric": "数値",
     "page.rename.combo.custom": "カスタム",
     "page.rename.btn.apply": "適用",
+    "page.rename.group.tools": "編集ツール",
+    "page.rename.btn.view": "表示",
+    "page.rename.btn.add": "追加",
+    "page.rename.btn.move": "移動",
+    "page.rename.btn.delete": "削除",
+    "page.rename.btn.undo": "元に戻す",
 
     "page.ts.btn.load_points": "苗位置SHP",
     "page.ts.btn.add_date": "日付追加",
