--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -103,20 +103,41 @@
     "page.seedling.msg.preview_stopping": "正在尝试中断推理",
     "page.seedling.msg.preview_finished": "预览推理完成",
     "page.seedling.msg.preview_cancelled": "预览推理已取消",
+    "page.seedling.btn.save_shp": "保存 SHP",
 
+    "page.rename.group.file": "文件",
+    "page.rename.btn.load_dom": "加载影像",
+    "page.rename.btn.load_boundary": "加载边界",
     "page.rename.group.ridge": "垄检测",
+    "page.rename.tab.file": "文件",
+    "page.rename.tab.ridge": "垄检测",
+    "page.rename.tab.ordering": "排序",
+    "page.rename.tab.numbering": "编号",
     "page.rename.label.direction": "方向:",
     "page.rename.combo.auto": "自动检测",
     "page.rename.combo.x": "X方向",
     "page.rename.combo.y": "Y方向",
     "page.rename.label.strength": "强度比:",
+    "page.rename.label.distance": "距离:",
+    "page.rename.label.height": "高度:",
     "page.rename.btn.detect": "检测垄",
+    "page.rename.group.order": "排序规则",
+    "page.rename.label.buffer": "缓冲:",
+    "page.rename.check.ransac": "RANSAC",
+    "page.rename.label.residual": "残差:",
+    "page.rename.label.max_trials": "最大尝试:",
     "page.rename.group.num": "编号规则",
     "page.rename.label.format": "格式:",
     "page.rename.combo.rc_plant": "垄号-苗号",
     "page.rename.combo.numeric": "纯数字",
     "page.rename.combo.custom": "自定义",
     "page.rename.btn.apply": "应用编号",
+    "page.rename.group.tools": "编辑工具",
+    "page.rename.btn.view": "查看",
+    "page.rename.btn.add": "添加",
+    "page.rename.btn.move": "移动",
+    "page.rename.btn.delete": "删除",
+    "page.rename.btn.undo": "撤销",
 
     "page.ts.btn.load_points": "加载苗位置SHP",
     "page.ts.btn.add_date": "添加日期",
