feat: add boundary-aware slice filtering modes for seedling inference

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -72,8 +72,11 @@
     "page.seedling.tab.slice_infer": "SAM3 Slice Inference",
     "page.seedling.tab.points": "Points",
     "page.seedling.btn.load_dom": "Load DOM",
+    "page.seedling.btn.load_boundary": "Load Boundary SHP",
     "page.seedling.label.no_dom": "No DOM loaded",
+    "page.seedling.label.no_boundary": "No boundary loaded",
     "page.seedling.dialog.load_dom": "Select DOM GeoTIFF",
+    "page.seedling.dialog.load_boundary": "Select boundary SHP",
     "page.seedling.label.prompt": "Prompt:",
     "page.seedling.label.preview_size": "Preview Size:",
     "page.seedling.btn.pick_preview": "Pick Preview",
@@ -103,6 +106,8 @@
     "page.seedling.msg.preview_stopping": "Trying to stop inference",
     "page.seedling.msg.preview_finished": "Preview inference finished",
     "page.seedling.msg.preview_cancelled": "Preview inference cancelled",
+    "page.seedling.msg.boundary_loaded": "Boundary loaded",
+    "page.seedling.msg.boundary_invalid": "Invalid boundary file",
     "page.seedling.btn.save_shp": "Save SHP",
 
     "page.rename.group.file": "File",
