--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -72,8 +72,11 @@
     "page.seedling.tab.slice_infer": "SAM3切块推理",
     "page.seedling.tab.points": "点结果",
     "page.seedling.btn.load_dom": "选择DOM",
+    "page.seedling.btn.load_boundary": "加载边界SHP",
     "page.seedling.label.no_dom": "尚未加载DOM",
+    "page.seedling.label.no_boundary": "未加载边界",
     "page.seedling.dialog.load_dom": "选择DOM GeoTIFF",
+    "page.seedling.dialog.load_boundary": "选择边界SHP",
     "page.seedling.label.prompt": "提示词:",
     "page.seedling.label.preview_size": "预览框尺寸:",
     "page.seedling.btn.pick_preview": "选择预览区",
@@ -103,6 +106,8 @@
     "page.seedling.msg.preview_stopping": "正在尝试中断推理",
     "page.seedling.msg.preview_finished": "预览推理完成",
     "page.seedling.msg.preview_cancelled": "预览推理已取消",
+    "page.seedling.msg.boundary_loaded": "边界加载成功",
+    "page.seedling.msg.boundary_invalid": "边界文件无效",
     "page.seedling.btn.save_shp": "保存 SHP",
 
     "page.rename.group.file": "文件",
