--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -72,8 +72,11 @@
     "page.seedling.tab.slice_infer": "SAM3スライス推論",
     "page.seedling.tab.points": "ポイント結果",
     "page.seedling.btn.load_dom": "DOM選択",
+    "page.seedling.btn.load_boundary": "境界SHPを読込",
     "page.seedling.label.no_dom": "DOM未読み込み",
+    "page.seedling.label.no_boundary": "境界未読み込み",
     "page.seedling.dialog.load_dom": "DOM GeoTIFFを選択",
+    "page.seedling.dialog.load_boundary": "境界SHPを選択",
     "page.seedling.label.prompt": "プロンプト:",
     "page.seedling.label.preview_size": "前覧のサイズ:",
     "page.seedling.btn.pick_preview": "前覧範囲を選択",
@@ -103,6 +106,8 @@
     "page.seedling.msg.preview_stopping": "推論を停止しています",
     "page.seedling.msg.preview_finished": "前覧推論が完了しました",
     "page.seedling.msg.preview_cancelled": "プレビュー推論をキャンセルしました",
+    "page.seedling.msg.boundary_loaded": "境界を読み込みました",
+    "page.seedling.msg.boundary_invalid": "境界ファイルが無効です",
     "page.seedling.btn.save_shp": "SHP保存",
 
     "page.rename.group.file": "ファイル",
