feat: add toggleable boundary and overlay pruning for slice results

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -91,6 +91,10 @@
     "page.seedling.group.slice": "Slice Params",
     "page.seedling.label.size": "Size:",
     "page.seedling.label.overlap": "Overlap:",
+    "page.seedling.label.iou_thresh": "iou thresh:",
+    "page.seedling.label.ios_thresh": "ios thresh:",
+    "page.seedling.check.rm_boundary": "rm boundary",
+    "page.seedling.check.rm_overlay": "rm overlay",
     "page.seedling.group.tools": "Edit Tools",
     "page.seedling.btn.view": "View",
     "page.seedling.btn.add": "Add",
