--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -91,6 +91,10 @@
     "page.seedling.group.slice": "スライス",
     "page.seedling.label.size": "サイズ:",
     "page.seedling.label.overlap": "オーバーラップ:",
+    "page.seedling.label.iou_thresh": "IoU閾値:",
+    "page.seedling.label.ios_thresh": "IoS閾値:",
+    "page.seedling.check.rm_boundary": "境界上で削除",
+    "page.seedling.check.rm_overlay": "重畳で削除",
     "page.seedling.group.tools": "編集ツール",
     "page.seedling.btn.view": "表示",
     "page.seedling.btn.add": "追加",
