--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -91,6 +91,10 @@
     "page.seedling.group.slice": "切片参数",
     "page.seedling.label.size": "大小:",
     "page.seedling.label.overlap": "重叠率:",
+    "page.seedling.label.iou_thresh": "IoU阈值:",
+    "page.seedling.label.ios_thresh": "IoS阈值:",
+    "page.seedling.check.rm_boundary": "移除贴边",
+    "page.seedling.check.rm_overlay": "移除重叠",
     "page.seedling.group.tools": "编辑工具",
     "page.seedling.btn.view": "查看",
     "page.seedling.btn.add": "添加",
