--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -112,6 +112,9 @@
     "page.seedling.msg.preview_cancelled": "预览推理已取消",
     "page.seedling.msg.boundary_loaded": "边界加载成功",
     "page.seedling.msg.boundary_invalid": "边界文件无效",
+    "page.seedling.msg.no_merged_results": "请先完成全图推理并生成结果",
+    "page.seedling.dialog.save_results": "选择导出目录",
+    "page.seedling.msg.save_results_success": "已导出 bbox.shp 和 points.shp",
     "page.seedling.btn.save_shp": "保存 SHP",
 
     "page.rename.group.file": "文件",
