feat(task1): add RenameTab input bundle contract and state
Introduce Rename IDs file-tab session state, input-ready signaling, and unified points/boundary/DOM entry handling in the UI contract. Add i18n label updates for the new file-tab points action.

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -121,6 +121,7 @@
     "page.seedling.msg.sent_to_next": "Points sent to Rename IDs",
 
     "page.rename.group.file": "File",
+    "page.rename.btn.load_points": "Load Points",
     "page.rename.btn.load_dom": "Load DOM",
     "page.rename.btn.load_boundary": "Load Boundary",
     "page.rename.group.ridge": "Ridge Detect",
