--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -121,6 +121,7 @@
     "page.seedling.msg.sent_to_next": "点结果已发送到 Rename IDs",
 
     "page.rename.group.file": "文件",
+    "page.rename.btn.load_points": "加载点",
     "page.rename.btn.load_dom": "加载影像",
     "page.rename.btn.load_boundary": "加载边界",
     "page.rename.group.ridge": "垄检测",
