feat(task3): add ridge direction sources and manual draw flow

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -133,6 +133,14 @@
     "page.rename.combo.auto": "Auto",
     "page.rename.combo.x": "X-Axis",
     "page.rename.combo.y": "Y-Axis",
+    "page.rename.combo.boundary_x": "Boundary X",
+    "page.rename.combo.boundary_y": "Boundary Y",
+    "page.rename.combo.boundary_neg_x": "Boundary -X",
+    "page.rename.combo.boundary_neg_y": "Boundary -Y",
+    "page.rename.combo.manual_draw": "Manual Draw",
+    "page.rename.btn.set_ridge_direction": "Set Ridge Direction",
+    "page.rename.btn.focus_ridge": "Focus Ridge",
+    "page.rename.msg.manual_vector_invalid": "Manual direction needs two distinct points",
     "page.rename.label.strength": "Strength Ratio:",
     "page.rename.label.distance": "Distance:",
     "page.rename.label.height": "Height:",
