--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -133,6 +133,14 @@
     "page.rename.combo.auto": "自動",
     "page.rename.combo.x": "X方向",
     "page.rename.combo.y": "Y方向",
+    "page.rename.combo.boundary_x": "境界 X",
+    "page.rename.combo.boundary_y": "境界 Y",
+    "page.rename.combo.boundary_neg_x": "境界 -X",
+    "page.rename.combo.boundary_neg_y": "境界 -Y",
+    "page.rename.combo.manual_draw": "手動描画",
+    "page.rename.btn.set_ridge_direction": "畝方向を設定",
+    "page.rename.btn.focus_ridge": "畝方向にフォーカス",
+    "page.rename.msg.manual_vector_invalid": "手動方向には異なる2点が必要です",
     "page.rename.label.strength": "強度比:",
     "page.rename.label.distance": "距離:",
     "page.rename.label.height": "高さ:",
