--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -133,6 +133,14 @@
     "page.rename.combo.auto": "自动检测",
     "page.rename.combo.x": "X方向",
     "page.rename.combo.y": "Y方向",
+    "page.rename.combo.boundary_x": "边界 X",
+    "page.rename.combo.boundary_y": "边界 Y",
+    "page.rename.combo.boundary_neg_x": "边界 -X",
+    "page.rename.combo.boundary_neg_y": "边界 -Y",
+    "page.rename.combo.manual_draw": "手动画线",
+    "page.rename.btn.set_ridge_direction": "设置垄方向",
+    "page.rename.btn.focus_ridge": "聚焦垄方向",
+    "page.rename.msg.manual_vector_invalid": "手动方向需要两个不同的点",
     "page.rename.label.strength": "强度比:",
     "page.rename.label.distance": "距离:",
     "page.rename.label.height": "高度:",
