feat(task4): add ridge rotation confirm dialog and focus action

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -141,6 +141,10 @@
     "page.rename.btn.set_ridge_direction": "Set Ridge Direction",
     "page.rename.btn.focus_ridge": "Focus Ridge",
     "page.rename.msg.manual_vector_invalid": "Manual direction needs two distinct points",
+    "page.rename.msg.rotation_confirm_title": "Apply Ridge Rotation",
+    "page.rename.msg.rotation_confirm_content": "Ridge direction is ready. Apply map rotation to follow ridge direction now?",
+    "page.rename.btn.apply_rotation_now": "Apply Rotation",
+    "page.rename.msg.no_ridge_rotation": "No ridge direction rotation angle available",
     "page.rename.label.strength": "Strength Ratio:",
     "page.rename.label.distance": "Distance:",
     "page.rename.label.height": "Height:",
