--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -141,6 +141,10 @@
     "page.rename.btn.set_ridge_direction": "畝方向を設定",
     "page.rename.btn.focus_ridge": "畝方向にフォーカス",
     "page.rename.msg.manual_vector_invalid": "手動方向には異なる2点が必要です",
+    "page.rename.msg.rotation_confirm_title": "畝方向の回転を適用",
+    "page.rename.msg.rotation_confirm_content": "畝方向が確定しました。今すぐ地図回転を適用して畝方向に合わせますか？",
+    "page.rename.btn.apply_rotation_now": "回転を適用",
+    "page.rename.msg.no_ridge_rotation": "適用可能な畝方向の回転角がありません",
     "page.rename.label.strength": "強度比:",
     "page.rename.label.distance": "距離:",
     "page.rename.label.height": "高さ:",
