--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -141,6 +141,10 @@
     "page.rename.btn.set_ridge_direction": "设置垄方向",
     "page.rename.btn.focus_ridge": "聚焦垄方向",
     "page.rename.msg.manual_vector_invalid": "手动方向需要两个不同的点",
+    "page.rename.msg.rotation_confirm_title": "应用垄方向旋转",
+    "page.rename.msg.rotation_confirm_content": "已获得垄方向。是否立即应用旋转使地图跟随垄方向？",
+    "page.rename.btn.apply_rotation_now": "应用旋转",
+    "page.rename.msg.no_ridge_rotation": "当前没有可用的垄方向旋转角",
     "page.rename.label.strength": "强度比:",
     "page.rename.label.distance": "距离:",
     "page.rename.label.height": "高度:",
