fix(task4): refine ridge labels, flyouts, and chart layout
Adopt clearer i18n parameter names with click-triggered simple flyouts, support finer float tuning semantics, and compact ridge chart labels for better plotting space.

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -145,9 +145,13 @@
     "page.rename.msg.rotation_confirm_content": "Ridge direction is ready. Apply map rotation to follow ridge direction now?",
     "page.rename.btn.apply_rotation_now": "Apply Rotation",
     "page.rename.msg.no_ridge_rotation": "No ridge direction rotation angle available",
-    "page.rename.label.strength": "Strength Ratio:",
-    "page.rename.label.distance": "Distance:",
-    "page.rename.label.height": "Height:",
+    "page.rename.label.strength": "Density Bin Width:",
+    "page.rename.label.distance": "Min Peak Spacing:",
+    "page.rename.label.height": "Peak Count Threshold:",
+    "page.rename.tip.title": "Ridge Parameter",
+    "page.rename.tip.strength": "Histogram bin width along projected X. Smaller values reveal finer peak-and-valley detail; larger values smooth the profile.",
+    "page.rename.tip.distance": "Minimum spacing between accepted peaks on projected X. Unit follows CRS (usually meters).",
+    "page.rename.tip.height": "Minimum count threshold for a peak. Peaks below this value are treated as local noise and ignored.",
     "page.rename.btn.detect": "Detect Ridge",
     "page.rename.group.order": "Ordering Rules",
     "page.rename.label.buffer": "Buffer:",
