--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -145,9 +145,13 @@
     "page.rename.msg.rotation_confirm_content": "畝方向が確定しました。今すぐ地図回転を適用して畝方向に合わせますか？",
     "page.rename.btn.apply_rotation_now": "回転を適用",
     "page.rename.msg.no_ridge_rotation": "適用可能な畝方向の回転角がありません",
-    "page.rename.label.strength": "強度比:",
-    "page.rename.label.distance": "距離:",
-    "page.rename.label.height": "高さ:",
+    "page.rename.label.strength": "密度ステップ:",
+    "page.rename.label.distance": "ピーク最小間隔:",
+    "page.rename.label.height": "ピークカウント閾値:",
+    "page.rename.tip.title": "畝パラメータ",
+    "page.rename.tip.strength": "Projected X 軸上のヒストグラムのビン幅です。小さいほど峰谷の細部が見え、大きいほど分布が平滑になります。",
+    "page.rename.tip.distance": "採用するピーク間の最小間隔です。単位は CRS に従います（通常は m）。",
+    "page.rename.tip.height": "ピークとして採用する最小カウント閾値です。この値未満の局所ピークはノイズとして除外されます。",
     "page.rename.btn.detect": "畝検出",
     "page.rename.group.order": "順序ルール",
     "page.rename.label.buffer": "バッファ:",
