--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -145,9 +145,13 @@
     "page.rename.msg.rotation_confirm_content": "已获得垄方向。是否立即应用旋转使地图跟随垄方向？",
     "page.rename.btn.apply_rotation_now": "应用旋转",
     "page.rename.msg.no_ridge_rotation": "当前没有可用的垄方向旋转角",
-    "page.rename.label.strength": "强度比:",
-    "page.rename.label.distance": "距离:",
-    "page.rename.label.height": "高度:",
+    "page.rename.label.strength": "密度步长:",
+    "page.rename.label.distance": "峰间最小距:",
+    "page.rename.label.height": "峰值计数阈值:",
+    "page.rename.tip.title": "垄参数说明",
+    "page.rename.tip.strength": "沿 Projected X 的直方图分箱宽度。值越小，峰谷细节越明显；值越大，曲线更平滑。",
+    "page.rename.tip.distance": "有效峰之间允许的最小间距。单位跟随 CRS（通常为米）。",
+    "page.rename.tip.height": "峰值最小计数阈值。低于该值的局部峰会被视作噪声并过滤。",
     "page.rename.btn.detect": "检测垄",
     "page.rename.group.order": "排序规则",
     "page.rename.label.buffer": "缓冲:",
