feat(rename_ids): gate ordering UI by ridge readiness

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -158,6 +158,7 @@
     "page.rename.check.ransac": "RANSAC",
     "page.rename.label.residual": "Residual:",
     "page.rename.label.max_trials": "Max Trials:",
+    "page.rename.label.ordering_stats": "Assigned: {assigned} / Ignored: {ignored} / Total: {total}",
     "page.rename.group.num": "Numbering Rules",
     "page.rename.label.format": "Format:",
     "page.rename.combo.rc_plant": "Ridge-Plant",
