--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -1,4 +1,3 @@
-
 {
     "app.title": "EasyPlantFieldID",
     "nav.subplot": "Subplot Generation",
@@ -7,7 +6,6 @@
     "nav.timeseries": "Time Series Crop",
     "nav.annotate": "Annotation & Train",
     "nav.settings": "Settings",
-    
     "layer_panel.title": "Layers",
     "layer_panel.add_tooltip": "Add Layer",
     "layer_panel.remove_tooltip": "Remove Selected Layer",
@@ -18,21 +16,17 @@
     "layer_panel.confirm.delete.msg": "Are you sure you want to delete layer '{name}'?",
     "layer_panel.rename.fail.title": "Rename Failed",
     "layer_panel.rename.fail.msg": "Name '{name}' already exists.",
-
     "status.coord": "Coord: X: {x:.2f}, Y: {y:.2f}",
     "status.zoom_prefix": "Zoom: ",
     "status.rotation_prefix": "Rotation: ",
     "status.zoom": "Zoom: {zoom:.0f}%",
     "status.rotation": "Rotation: {angle:.2f}°",
-
     "error": "Error",
     "warning": "Warning",
     "success": "Success",
-
     "page.common.file": "File",
     "page.common.save": "Save SHP",
     "page.common.load_shp": "Load SHP",
-    
     "page.subplot.group.file": "File",
     "page.subplot.btn.load_image": "Load Image",
     "page.subplot.btn.load_boundary": "Load Boundary SHP",
@@ -55,14 +49,12 @@
     "page.subplot.btn.focus": "Focus & Rotate",
     "page.subplot.btn.reset": "Reset",
     "page.subplot.btn.save": "Save SHP",
-
     "page.subplot.dialog.load_image": "Load Background Image",
     "page.subplot.dialog.load_boundary": "Load Plot Boundary Shapefile",
     "page.subplot.dialog.save": "Save Subplot Shapefile",
     "page.subplot.error.invalid_boundary": "Invalid boundary file! Please select a Shapefile containing exactly one Polygon.",
     "page.subplot.warning.no_boundary": "Please load a boundary file first!",
     "page.subplot.msg.success": "Subplots generated and saved successfully!",
-
     "page.seedling.group.sam": "SAM3 Detection",
     "page.seedling.group.office": "Ribbon",
     "page.seedling.tab.file": "File",
@@ -106,10 +98,10 @@
     "page.seedling.msg.preview_locked": "Preview area locked",
     "page.seedling.msg.pick_preview_first": "Pick a preview area on the map first",
     "page.seedling.msg.preview_patch_failed": "Failed to read preview patch",
-    "page.seedling.msg.preview_running": "SAM3 preview inference is running",
-    "page.seedling.msg.preview_stopping": "Trying to stop inference",
-    "page.seedling.msg.preview_finished": "Preview inference finished",
-    "page.seedling.msg.preview_cancelled": "Preview inference cancelled",
+    "page.seedling.msg.preview_running": "SAM3 inference is running",
+    "page.seedling.msg.preview_stopping": "Trying to stop SAM3 inference",
+    "page.seedling.msg.preview_finished": "SAM3 inference finished",
+    "page.seedling.msg.preview_cancelled": "SAM3 inference cancelled",
     "page.seedling.msg.boundary_loaded": "Boundary loaded",
     "page.seedling.msg.boundary_invalid": "Invalid boundary file",
     "page.seedling.msg.no_merged_results": "Run full inference first",
@@ -119,7 +111,6 @@
     "page.seedling.btn.send_to_next": "send to next",
     "page.seedling.msg.save_first_before_send": "Save SHP first",
     "page.seedling.msg.sent_to_next": "Points sent to Rename IDs",
-
     "page.rename.group.file": "File",
     "page.rename.btn.load_points": "Load Points",
     "page.rename.btn.load_dom": "Load DOM",
@@ -171,7 +162,6 @@
     "page.rename.btn.move": "Move",
     "page.rename.btn.delete": "Delete",
     "page.rename.btn.undo": "Undo",
-
     "page.ts.btn.load_points": "Load Plant Pts",
     "page.ts.btn.add_date": "Add Date",
     "page.ts.group.param": "Crop Params",
@@ -183,7 +173,6 @@
     "page.ts.label.dir": "Directory:",
     "page.ts.btn.browse": "Browse...",
     "page.ts.btn.start": "Start Crop",
-
     "page.anno.btn.load_img": "Load Images",
     "page.anno.group.nav": "Navigation",
     "page.anno.btn.prev": "Prev",
@@ -195,7 +184,6 @@
     "page.anno.group.train": "Training",
     "page.anno.btn.train": "Train YOLO",
     "page.anno.btn.switch": "Switch Model",
-
     "settings.group.general": "General",
     "settings.group.model": "Model",
     "settings.label.theme": "Theme Mode",
@@ -216,62 +204,47 @@
     "settings.placeholder.no_file": "No file selected",
     "settings.msg.restart_title": "Restart Required",
     "settings.msg.restart": "Please restart the application to apply changes",
-
     "prop.group.numbering": "Numbering Rules",
-
     "prop.label.numbering_mode": "Numbering Mode",
     "prop.label.start_row": "Start Row",
     "prop.label.start_col": "Start Col",
     "prop.label.prefix": "ID Prefix",
     "prop.label.suffix": "ID Suffix",
-    
     "prop.group.rotation": "Rotation Options",
     "prop.label.rotation": "Rotation Angle",
     "prop.check.auto_rotate": "Auto Calculate",
-
     "prop.group.detect": "Detection Settings",
     "prop.label.confidence": "Confidence Threshold",
     "prop.label.nms_iou": "NMS IoU",
-
     "prop.group.stats": "Statistics",
     "prop.label.total": "Total Detected",
     "prop.label.selected": "Selected",
-
     "prop.group.ransac": "RANSAC Parameters",
     "prop.label.dist_thresh": "Distance Threshold",
     "prop.label.height_thresh": "Height Threshold",
-    
     "prop.group.numbering_opt": "Numbering Options",
     "prop.label.order": "Sort Order",
     "prop.label.start_id": "Start ID",
-
     "prop.group.ridge_stats": "Ridge Statistics",
     "prop.label.ridge_count": "Ridge Count",
     "prop.label.plant_count": "Plant Count",
-
     "prop.group.data": "Data Sources",
     "prop.label.date_count": "Dates Added",
     "prop.label.point_count": "Plant Points",
-
     "prop.group.output": "Output Options",
     "prop.label.format": "Image Format",
     "prop.check.subfolders": "Create Subfolders",
-
     "prop.group.adjust": "Image Adjustment",
     "prop.label.brightness": "Brightness",
     "prop.label.contrast": "Contrast",
     "prop.label.gamma": "Gamma",
-
     "prop.group.instance": "Instances",
     "prop.label.current_img": "Current Image",
-
     "prop.group.class": "Class Management",
     "prop.label.current_class": "Current Class",
     "prop.btn.add_class": "Add Class",
-
     "prop.group.train": "Training Status",
     "prop.label.annotated": "Annotated Images",
     "prop.label.model_status": "Model Status",
-    
     "prop.title": "Properties"
 }
