refact(rename): to AgriTesseract

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -1,5 +1,5 @@
 {
-    "app.title": "EasyPlantFieldID",
+    "app.title": "AgriTesseract",
     "nav.subplot": "Subplot Generation",
     "nav.seedling": "Seedling Detection",
     "nav.rename": "ID Renaming",
