--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -1,5 +1,5 @@
 {
-    "app.title": "EasyPlantFieldID",
+    "app.title": "AgriTesseract",
     "nav.subplot": "サブプロット生成",
     "nav.seedling": "苗位置検出",
     "nav.rename": "苗ID変更",
