--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -1,5 +1,5 @@
 {
-    "app.title": "EasyPlantFieldID",
+    "app.title": "AgriTesseract",
     "nav.subplot": "小样地生成",
     "nav.seedling": "苗位置检测",
     "nav.rename": "苗ID重命名",
